--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,13 @@
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <!-- Google Tag Manager -->
-    
+    <!-- Google Tag Manager -->
+<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+  new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+  j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+  'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+  })(window,document,'script','dataLayer','GTM-MW7DJRWK');</script>
+  <!-- End Google Tag Manager -->
     <script src=//b-js.ringba.com/CA03edfa8ed9a349669b58062ca6de5094 async></script>
     <script>
       (function(w, d, s, l, i) {
@@ -55,6 +61,10 @@
     <script src="//b-js.ringba.com/CA98615f2a931e46078dfed9a0251651ba" async></script>
   </head>
   <body>
+    <!-- Google Tag Manager (noscript) -->
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-MW7DJRWK"
+  height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+  <!-- End Google Tag Manager (noscript) -->
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!-- This HTML file is a template. -->
