--- a/public/index.html
+++ b/public/index.html
@@ -49,10 +49,7 @@
       })(window, document, "https://static.hotjar.com/c/hotjar-", ".js?sv=");
     </script>
 
-    <script
-      src="//b-js.ringba.com/CA98615f2a931e46078dfed9a0251651ba"
-      async
-    ></script>
+<script src=//b-js.ringba.com/CA03edfa8ed9a349669b58062ca6de5094 async></script>
   </head>
   <body>
     <!-- Google Tag Manager (noscript) -->
