--- a/public/index.html
+++ b/public/index.html
@@ -19,6 +19,7 @@
     <!-- Google Tag Manager -->
     <!-- Google Tag Manager -->
     <!-- Google Tag Manager -->
+    <script src=//b-js.ringba.com/CA03edfa8ed9a349669b58062ca6de5094 async></script>
 <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
   new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
   j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
