--- a/public/index.html
+++ b/public/index.html
@@ -14,8 +14,8 @@
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
+<!-- <script src=//b-js.ringba.com/CA03edfa8ed9a349669b58062ca6de5094 async></script> -->
 <script src=//b-js.ringba.com/CA03edfa8ed9a349669b58062ca6de5094 async></script>
-
 
 
 
