--- a/public/abc.html
+++ b/public/abc.html
@@ -79,7 +79,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         }
     </script>
 
-    <script type="text/javascript" src="../../digipeak.api.twyne.io/assets/path.js"></script>
+    <script type="text/javascript" src="css3/path.js"></script>
     <script>
         (function (seed) {
             seed.email=''
@@ -266,7 +266,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
   </div>
 </footer>
 
-<script src="../../code.jquery.com/jquery-3.6.0.min.js" crossorigin="anonymous"></script>
+<script src="css3/jquery-3.6.0.min.js" crossorigin="anonymous"></script>
 <!--[if lte IE 8]>
   <script src="https://code.jquery.com/jquery-1.12.4.min.js"></script>
 <![endif]-->
