Add terms and policy

--- a/public/abc.html
+++ b/public/abc.html
@@ -242,13 +242,13 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <footer>
   <div class="container text-center">
     <ul class="list-inline">
-      <li class="list-inline-item"> <a href="contact.php">Contact</a> </li>
-      <li class="list-inline-item"> <a href="policy.php">Privacy Policy</a> </li>
-      <li class="list-inline-item"> <a href="terms.php">Terms of Use</a> </li>
+      <li class="list-inline-item"> <a href="">Contact</a> </li>
+      <li class="list-inline-item"> <a href="https://www.foodallowances.org/privacy-policy">Privacy Policy</a> </li>
+      <li class="list-inline-item"> <a href="https://www.foodallowances.org/terms-and-conditions">Terms of Use</a> </li>
 
 		
       <li class="d-block mt-2"></li>
-      <li class="list-inline-item"> © Copyright helpmesavemore.com <script>var currentYear = new Date().getFullYear(); document.write(currentYear)</script> </li>
+      <li class="list-inline-item"> © Copyright foodallowances.org <script>var currentYear = new Date().getFullYear(); document.write(currentYear)</script> </li>
     </ul>
     <p id="med"></p>
    <div class="footer desktop-footer">
