--- a/public/unique.html
+++ b/public/unique.html
@@ -142,11 +142,11 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <img src="index_files/logo.png" width="234" height="64" alt="">
 <hr>
     <ul class="footer-menu">
-     <li><a href="policy.php" target="_blank">Private Policy</a></li>
-      <li><a href="terms.php" target="_blank">Terms</a></li>
-      <li><a href="contact.php" target="_blank">Contact Us</a></li>
+     <li><a href="https://www.foodallowances.org/privacy-policy" target="_blank">Private Policy</a></li>
+      <li><a href="https://www.foodallowances.org/terms-and-conditions" target="_blank">Terms</a></li>
+      <li><a href="" target="_blank">Contact Us</a></li>
       <li class="sep"></li>
-      <li>helpmesavemore.com © 2023</li>
+      <li>foodallowances.org © 2023</li>
     </ul>
     <hr>
     <center>
