--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,7 @@
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
 <!-- <script src=//b-js.ringba.com/CA03edfa8ed9a349669b58062ca6de5094 async></script> -->
-<script src=//b-js.ringba.com/CA03edfa8ed9a349669b58062ca6de5094 async></script>
+<!-- <script src=//b-js.ringba.com/CA03edfa8ed9a349669b58062ca6de5094 async></script> -->
 
 <script src=//b-js.ringba.com/CA1a16b597ee204279b113debdbea8413c async></script>
 
