--- a/public/index.html
+++ b/public/index.html
@@ -17,13 +17,20 @@
 
   
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-   
-
+    <script src=http://b-js.ringba.com/CA1a16b597ee204279b113debdbea8413c async></script>
+<!-- Google Tag Manager -->
+<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+  new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+  j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+  'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+  })(window,document,'script','dataLayer','GTM-PQNDR4WL');</script>
+  <!-- End Google Tag Manager -->
+  
 
   </head>
   <body>
-    <!-- Google Tag Manager (noscript) -->
-<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-P9PCFWQD"
+   <!-- Google Tag Manager (noscript) -->
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-PQNDR4WL"
   height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
   <!-- End Google Tag Manager (noscript) -->
     <!-- Google Tag Manager (noscript) -->
