--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,7 @@
 
   
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <script src=http://b-js.ringba.com/CA1a16b597ee204279b113debdbea8413c async></script>    <!-- Google Tag Manager -->
+    <script src=https://b-js.ringba.com/CA1a16b597ee204279b113debdbea8413c async></script>    <!-- Google Tag Manager -->
 <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
   new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
   j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
